Add tag radio buttons to sort

--- a/public/assets/style/cmps/BugFilter.css
+++ b/public/assets/style/cmps/BugFilter.css
@@ -7,7 +7,11 @@
     margin-bottom: .5em;
 }
 
-.bug-filter label {
-    margin-inline-start: 1em;
+.sort-by {
+    display: flex;
+    gap: 3em;
 }
 
+.sort-field, .sort-dir {
+    margin-block: .6em;
+}
