--- a/public/assets/style/main.css
+++ b/public/assets/style/main.css
@@ -14,4 +14,6 @@
 
 @import './cmps/BugList.css';
 @import './cmps/BugFilter.css';
+@import './cmps/LabelChooser.css';
+@import './cmps/tag.css';
 @import './cmps/BugPreview.css';
