--- a/public/assets/style/cmps/tag.css
+++ b/public/assets/style/cmps/tag.css
@@ -12,9 +12,12 @@ label.tag:has(input:checked) {
 }
 
 label.tag > input {
-    appearance: none;
     width: 0;
     height: 0;
     margin: 0;
     padding: 0;
+}
+
+label.tag:has(input:focus-visible) {
+    outline: 1px solid darkblue;
 }
